templates/arm/template.json

    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {

    },
    "resources": [
        {
            "comments": "",
            "type": "Microsoft.Compute/availabilitySets",
            "sku": {
                "name": "Aligned"
            },
            "name": "[parameters('availabilitySet')]",
            "apiVersion": "2017-03-30",
            "location": "usgovarizona",
            "tags": {},
            "scale": null,
            "properties": {
                "platformUpdateDomainCount": 5,
                "platformFaultDomainCount": 2,
                "virtualMachines": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/b156ff74-abbe-49c8-bc92-b80e8a7bad23/resourceGroups/CoreCI/providers/Microsoft.Network/applicationSecurityGroups/CIAppServers'.",
            "type": "Microsoft.Network/applicationSecurityGroups",
            "name": "[parameters('applicationSecurityGroups_CIAppServers_name')]",
            "apiVersion": "2018-01-01",
            "location": "usgovarizona",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded"
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/b156ff74-abbe-49c8-bc92-b80e8a7bad23/resourceGroups/CoreCI/providers/Microsoft.Network/applicationSecurityGroups/CIBastionServers'.",
            "type": "Microsoft.Network/applicationSecurityGroups",
            "name": "[parameters('applicationSecurityGroups_CIBastionServers_name')]",
            "apiVersion": "2018-01-01",
            "location": "usgovarizona",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded"
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/b156ff74-abbe-49c8-bc92-b80e8a7bad23/resourceGroups/CoreCI/providers/Microsoft.Network/applicationSecurityGroups/CIDBServers'.",
            "type": "Microsoft.Network/applicationSecurityGroups",
            "name": "[parameters('applicationSecurityGroups_CIDBServers_name')]",
            "apiVersion": "2018-01-01",
            "location": "usgovarizona",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded"
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/b156ff74-abbe-49c8-bc92-b80e8a7bad23/resourceGroups/CoreCI/providers/Microsoft.Network/applicationSecurityGroups/CIWebServers'.",
            "type": "Microsoft.Network/applicationSecurityGroups",
            "name": "[parameters('applicationSecurityGroups_CIWebServers_name')]",
            "apiVersion": "2018-01-01",
            "location": "usgovarizona",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded"
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/b156ff74-abbe-49c8-bc92-b80e8a7bad23/resourceGroups/CoreCI/providers/Microsoft.Network/networkSecurityGroups/CoreCI-NSG'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_CoreCI_NSG_name')]",
            "apiVersion": "2018-01-01",
            "location": "usgovarizona",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "19bd98c0-62ee-4632-a72c-361ae78cfeed",
                "securityRules": [
                    {
                        "name": "Bastion-HTTP",
                        "etag": "W/\"77151575-f57f-4a63-8bf6-4735b13a6a6a\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": [],
                            "destinationApplicationSecurityGroups": [
                                {
                                    "location": "[parameters('networkSecurityGroups_CoreCI_NSG_location')]"
                                }
                            ]
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"77151575-f57f-4a63-8bf6-4735b13a6a6a\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"77151575-f57f-4a63-8bf6-4735b13a6a6a\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"77151575-f57f-4a63-8bf6-4735b13a6a6a\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"77151575-f57f-4a63-8bf6-4735b13a6a6a\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"77151575-f57f-4a63-8bf6-4735b13a6a6a\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"77151575-f57f-4a63-8bf6-4735b13a6a6a\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/b156ff74-abbe-49c8-bc92-b80e8a7bad23/resourceGroups/CoreCI/providers/Microsoft.Network/virtualNetworks/CoreCI-Web'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_CoreCI_Web_name')]",
            "apiVersion": "2018-01-01",
            "location": "usgovarizona",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "3ab8c017-ba23-45a4-8fd2-38145960118e",
                "addressSpace": {
                    "addressPrefixes": [
                        "10.2.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "App",
                        "etag": "W/\"aee39101-e949-425f-a8de-7c697d3c37cb\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.2.1.0/24",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_CoreCI_NSG_name'))]"
                            },
                            "serviceEndpoints": []
                        }
                    },
                    {
                        "name": "DB",
                        "etag": "W/\"aee39101-e949-425f-a8de-7c697d3c37cb\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.2.2.0/24",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_CoreCI_NSG_name'))]"
                            },
                            "serviceEndpoints": []
                        }
                    },
                    {
                        "name": "Web",
                        "etag": "W/\"aee39101-e949-425f-a8de-7c697d3c37cb\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.2.0.0/24",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_CoreCI_NSG_name'))]"
                            },
                            "serviceEndpoints": []
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false,
                "enableVmProtection": false
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_CoreCI_NSG_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/b156ff74-abbe-49c8-bc92-b80e8a7bad23/resourceGroups/CoreCI/providers/Microsoft.Network/networkSecurityGroups/CoreCI-NSG/securityRules/Bastion-HTTP'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_CoreCI_NSG_name'), '/', parameters('securityRules_Bastion_HTTP_name'))]",
            "apiVersion": "2018-01-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": [],
                "destinationApplicationSecurityGroups": [
                    {
                        "location": "[parameters('securityRules_Bastion_HTTP_location')]"
                    }
                ]
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_CoreCI_NSG_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/b156ff74-abbe-49c8-bc92-b80e8a7bad23/resourceGroups/CoreCI/providers/Microsoft.Network/virtualNetworks/CoreCI-Web/subnets/App'.",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworks_CoreCI_Web_name'), '/', parameters('subnets_App_name'))]",
            "apiVersion": "2018-01-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.2.1.0/24",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_CoreCI_NSG_name'))]"
                },
                "serviceEndpoints": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_CoreCI_Web_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_CoreCI_NSG_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/b156ff74-abbe-49c8-bc92-b80e8a7bad23/resourceGroups/CoreCI/providers/Microsoft.Network/virtualNetworks/CoreCI-Web/subnets/DB'.",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworks_CoreCI_Web_name'), '/', parameters('subnets_DB_name'))]",
            "apiVersion": "2018-01-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.2.2.0/24",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_CoreCI_NSG_name'))]"
                },
                "serviceEndpoints": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_CoreCI_Web_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_CoreCI_NSG_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/b156ff74-abbe-49c8-bc92-b80e8a7bad23/resourceGroups/CoreCI/providers/Microsoft.Network/virtualNetworks/CoreCI-Web/subnets/Web'.",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworks_CoreCI_Web_name'), '/', parameters('subnets_Web_name'))]",
            "apiVersion": "2018-01-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.2.0.0/24",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_CoreCI_NSG_name'))]"
                },
                "serviceEndpoints": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_CoreCI_Web_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_CoreCI_NSG_name'))]"
            ]
        }
    ]
}
